--- a/register.css
+++ b/register.css
@@ -24,7 +24,7 @@ body {
 input[type=text], input[type=password] {
   width: 100%;
   padding: 15px;
-  margin: 5px 0 22px 0;
+  margin: 5px 0 8px 0;
   display: inline-block;
   border: none;
   background: #f7f7f7;
@@ -33,7 +33,7 @@ input[type=text], input[type=password] {
 select {
   width: 18%;
   padding: 15px;
-  margin: 5px 0 22px 0;
+  margin: 5px 0 8px 0;
   display: inline-block;
   border: none;
   background: #f7f7f7;
@@ -43,7 +43,7 @@ select {
 input[type=phone] {
   width: 100%;
   padding: 15px;
-  margin: 5px 0 22px 0;
+  margin: 5px 0 8px 0;
   display: inline-block;
   border: none;
   background: #f7f7f7;
@@ -80,4 +80,18 @@ button:hover {
   .signupbtn {
      width: 100%;
   }
+}
+
+.status{
+  color:red;
+  font-size: 15px;
+  font-weight: 100;
+  font-family:cursive;
+}
+
+.success{
+  color:green;
+  font-size: 15px;
+  font-weight: 100;
+  font-family:cursive;
 }
